fix(modal): z-index bug with signup button

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -201,7 +201,7 @@
   width: 100vw;
   height: 100%;
   max-height: 180px;
-  z-index: 10;
+  z-index: 2;
   background: linear-gradient(
     0deg,
     rgba(3, 4, 6, 1) 0%,
